--- a/style.css
+++ b/style.css
@@ -1,11 +1,31 @@
-/* CSS files add styling rules to your content */
-
-body {
-  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  margin: 2em;
+*{
+  margin:  0;
+  padding: 0;
+  border:  0;
 }
-
-h1 {
-  font-style: italic;
-  color: #373fff;
+body{
+  background-color: pink;
+  font-size : large;
+   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  
 }
+header{
+  background-color: orange;
+  grid-column: 1 / -1;
+}
+footer{
+  background-color: red;
+  color: white;
+ 
+  grid-column: 1 / -1;
+}
+section{
+  background-color: gray;
+}
+nav{
+  background-color: seagreen;
+}
+  
