--- a/style.css
+++ b/style.css
@@ -15,15 +15,19 @@ body{
 header{
   background-color: orange;
   grid-column: 1 / -1;
+  text-align: center;
 }
 footer{
   background-color: red;
   color: white;
+  
  
   grid-column: 1 / -1;
 }
 section{
   background-color: gray;
+  grid-column-start: 2;
+  grid-column-end: 4;
 }
 nav{
   background-color: seagreen;
